Add splash area HTML and CSS

--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
     </header>
 
     <!-- splash photo and prompts -->
-    <div class="row">
+    <div class="row" id="splash">
       <div class="col-12 text-center">
         <h2>Welcome to the Student Showcase for the September 2016 Savvy Coders Cohort</h2>
-        <img class="center" src="http://imgfill.com/728x90">
         <p>Click on the student profiles below to go to our portfolio sites. Thanks for stopping by!</p>
       </div>
     </div>
@@ -95,7 +94,7 @@
                   Sam Campione
               </div>
               <div id="Sam" class="blurb">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
               </div>
           </div>
       </div>
